add user page animation for pre lollipop.